django-login/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginservice
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
