django-login/k8s/login-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-route
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /healthcheck
      backendRefs:
        - name: loginservice
          port: 80
